--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ margin-left: 0;
     <div class="box">
     <img src="kassa image/Diabetes.png">
     <div>
-        <a href="Diabetic/diabetic.html" https://yishak4real.github.io/kassa/diabetic.html><button class="img-visite" >
+        <a href="Diabetic/diabetic.html" href=https://yishak4real.github.io/kassa/diabetic.html><button class="img-visite" >
             visite</button></a>
         </div> 
     </div>
