--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ margin-left: 0;
     <div class="box">  
    <img src="kassa image/Vitamins.png"> 
    <div>
-   <a href="https://yishak4real.github.io/kassa/vitamins.html" ><button class="img-visite" >
+   <a href="https://yishak4real.github.io/kassa/vitamin.html" ><button class="img-visite" >
         visite</button></a>
     </div> 
     </div>
@@ -230,7 +230,7 @@ margin-left: 0;
         src="kassa image/Screenshot_20240312-154757_Canva.jpg"> 
         <div style="margin-top: -90px;">
             
-                <a href="https://yishak4real.github.io/kassa/skin care.html" ><button class="img-visite" >
+                <a href="https://yishak4real.github.io/kassa/SKIN CARE.html" ><button class="img-visite" >
                  visite</button></a>
                  
          </div> 
