--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ margin-left: 0;
     <div class="box">  
    <img src="kassa image/Vitamins.png"> 
    <div>
-   <a href="https://yishak4real.github.io/kassa/vitamin.html" ><button class="img-visite" >
+   <a href="https://yishak4real.github.io/kassa/Vitamin.html" ><button class="img-visite" >
         visite</button></a>
     </div> 
     </div>
